--- a/index.html
+++ b/index.html
@@ -241,7 +241,17 @@
         <div class="col-md-4">
             <div class="card-box">
                 <h3>Latest News</h3>
-                <p>Netflix Annouces its new upcoming Anime, with a new upcoming season two</p>
+                <p> “Devil May Cry Comics Make a Big Comeback in 2025!”
+                    ‎Devil May Cry fans finally have something huge to celebrate. After several quiet years, Capcom has officially announced a brand new comic series titled “Devil May Cry: Blood Requiem.”
+‎
+                    ‎This new arc will pick up after the events of DMC5, focusing on:
+‎
+                    ‎Dante and Vergil’s life and struggles in the Underworld
+                    ‎Nero stepping into a more mature, protective role
+                    ‎New demon threats deeply connected to Sparda’s forgotten past
+‎
+                    ‎Early teaser art shows a much more battle-worn Dante and a calm but dangerous Vergil, standing together in the Underworld. Fans immediately noticed the updated art style more dramatic, darker, and very reminiscent of the DMC3 manga.
+‎                    For the first time in years, the DMC universe feels alive again.</p>
             </div>
         </div>
     </div>
